--- a/view/components/header.html
+++ b/view/components/header.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%=title %></title>
+    <title><%=page.title %></title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/base.css">
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
@@ -17,19 +18,23 @@
         <div class="col-1">
             <span class="">logo</span>
         </div>
-        <div class="col-4 navbar-nav">
+        <div class="col-5 navbar-nav">
             <ul class="d-flex w-100 pl-0 mb-0">
-                <li><a href="#" class="nav-link">home</a></li>
+                <li><a href="/" class="nav-link">首页</a></li>
                 <li class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">home</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">产品分类</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="/product/list?typeId=1">手机</a>
+                        <a class="dropdown-item" href="#">电脑</a>
+                        <a class="dropdown-item" href="#">平板</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">键盘</a>
+                        <a class="dropdown-item" href="#">鼠标</a>
+                        <a class="dropdown-item" href="#">耳机</a>
                     </div>
                 </li>
-                <li><a href="#" class="nav-link">home</a></li>
+                <li><a href="#" class="nav-link">关于我们</a></li>
+                <li><a href="#" class="nav-link">联系我们</a></li>
             </ul>
         </div>
         <div class="col-4">
@@ -40,25 +45,23 @@
                     </div>
                 </div>
         </div>
-        <div class="col-3 d-flex mb-0 pr-0 justify-content-end">
+        <div class="col-2 d-flex mb-0 pr-0 justify-content-end">
             <div>
                 <% if(login.status==1){ %>
-                <button class="btn text-light dropdown-toggle  mr-2" data-toggle="dropdown">
-                    欢迎您 <%=login.uname %>！
+                <button class="btn text-light dropdown-toggle pl-0" data-toggle="dropdown">
+                    Hi~ <%=login.uname %>
                 </button>
                 <% } %>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">个人中心</a>
+                    <a class="dropdown-item" href="#">我的订单</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="/user/exit">退出</a>
                 </div>
             </div>
             <div><a href="#" class="btn btn-danger mr-2">购物车</a></div>
             <% if(login.status==0){ %>
             <div><a href="/login.html" class="btn btn-warning">登录</a></div>
-            <% }else{ %>
-                <div><a href="/user/exit" class="btn btn-warning">退出</a></div>
             <% } %>
         </div>
     </header>
