--- a/view/index.html
+++ b/view/index.html
@@ -33,14 +33,14 @@
                     <% if(pro.status==1){ 
                         pro.msg.forEach(function(ele){ %>
                     <div class="card">
-                        <a href="/product/detail?id=<%= ele.id %>"><img src="<%= ele.pImg %>" alt="" class="card-img-top"></a>
+                        <a href="/product/detail?pid=<%= ele.id %>"><img src="<%= ele.pImg %>" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <div class="card-title">
-                                <a href="/product/detail?id=<%= ele.id %>"><%= ele.pname+' | '+ele.pcolor %> </a>
+                                <a href="/product/detail?pid=<%= ele.id %>"><%= ele.pname+' | '+ele.pcolor %> </a>
                                 <small><%= ele.pslogan %></small></div>
                             <div class="card-text d-flex justify-content-between">
-                                <div class="price"><span><%= ele.salePrice %></span> <small><del><%= ele.unitPrice %></del></small></div>
-                                <a href="#" class="btn btn-sm btn-outline-primary" data-id="<%= ele.id %>">加入购物车</a>
+                                <div class="price"><span>￥<%= ele.salePrice %></span> <small><del>￥<%= ele.unitPrice %></del></small></div>
+                                <a href="javascript:;" class="btn btn-sm btn-outline-primary goCart" data-id="<%= ele.id %>">加入购物车</a>
                             </div>
                         </div>
                     </div>
@@ -53,15 +53,15 @@
                     <% if(newPro.status==1){ 
                         newPro.msg.forEach(function(ele){ %>
                     <div class="card">
-                        <a href="/product/detail?id=<%= ele.id %>"><img src="<%= ele.pImg %>" alt="" class="card-img-top"></a>
+                        <a href="/product/detail?pid=<%= ele.id %>"><img src="<%= ele.pImg %>" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <div class="card-title">
-                                <a href="/product/detail?id=<%= ele.id %>"><%= ele.pname+' | '+ele.pcolor %> </a>
+                                <a href="/product/detail?pid=<%= ele.id %>"><%= ele.pname+' | '+ele.pcolor %> </a>
                                 <small><%= ele.pslogan %></small>
                             </div>
                             <div class="card-text d-flex justify-content-between">
-                                <div class="price"><span><%= ele.salePrice %></span> <small><del><%= ele.unitPrice %></del></small></div>
-                                <a href="#" class="btn btn-sm btn-outline-primary" data-id="<%= ele.id %>">加入购物车</a>
+                                <div class="price"><span>￥<%= ele.salePrice %></span> <small><del>￥<%= ele.unitPrice %></del></small></div>
+                                <a href="javascript:;" class="btn btn-sm btn-outline-primary goCart" data-pid="<%= ele.id %>">加入购物车</a>
                             </div>
                         </div>
                     </div>
