--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,16 +2,20 @@ ul,ol,li{list-style: none;}
 .form-control:focus,.btn:active,.btn:focus{ }
 body{background: #f9f9f9; font-size: 14px;}
 .d-flex{margin-bottom: 0; padding: 0;}
+table.table td{vertical-align: middle;}
 
 header{color: #fff;}
 header .navbar-nav li{width: 100px;}
+header .cart{position: relative;}
+header .cart .badge{transform: translate(5px,-5px)}
 
 section{min-height: 400px;}
 section .main{background: #fff; margin: 0 -15px;}
-section .main-box{background: #fff; padding: 30px; margin: 20px auto; box-shadow: 1px 1px 5px rgba(0,0,0,0.5);}
+section .main-box{background: #fff; padding: 30px; margin: 20px auto; min-height: 500px; box-shadow: 1px 1px 5px rgba(0,0,0,0.5);}
 .index .list .card{width: 23%; overflow: hidden;}
 .index .list .card img{transition: all .5s;}
 .index .list .card img:hover{transform: scale(1.1)}
+
 
 .login{padding: 50px 0;}
 .login-box{width: 400px; height: 400px; padding: 30px; margin: 0 auto; position: relative; background: #fff; box-shadow: 0 0 3px 2px rgba(0,0,0,0.4);}
@@ -45,6 +49,25 @@ section .main-box{background: #fff; padding: 30px; margin: 20px auto; box-shadow
 
 footer{text-align: center; color: #666;}
 
+.redirect .card{ width: 60%; margin: 100px auto; box-shadow: 2px 2px 8px 3px rgba(0,0,0,0.3);}
+.redirect .card-header{font-size: 24px;}
+.redirect .card-title{margin: 10px 0;}
+.redirect .card-text{text-align: center; margin: 20px; font-size: 18px;}
+
+.addCart .btn{cursor: pointer;}
+.addCart .input{padding: 0;}
+.addCart input{height: 100%; width: 50px; border: 0; text-align: center;}
+.addCart .goCart i{font-size: 20px; color: #333; transform: rotateY(180deg)}
+
+.page{ text-align: center;}
+.page span.btn:hover{background: none; color:#6c757d;}
+
+
+.pro-list .pimg{width: 130px;}
+.pro-list th:last-child{text-align: center;}
+
+
+
 .detail .img-box{border: 1px solid #eee; width: 100%;}
 .detail .content h2{font-size: 28px; font-weight: 400;}
 .detail .content h5{font-size: 16px; color: #888;}
@@ -52,8 +75,14 @@ footer{text-align: center; color: #666;}
 .detail .content .box p{margin: 10px; font-size: 16px;}
 .detail .content .vip strong{font-size: 22px; color: #f60;}
 .detail .content .vip del{margin-left: 20px; color: #666;}
-.detail .content .addCart .btn{cursor: pointer;}
-.detail .content .addCart .input{padding: 0;}
-.detail .content .addCart input{height: 100%; width: 80px; border: 0; text-align: center;}
+.detail .content .addCart input{width: 80px;}
 .detail .content .addCart .goCart{margin-left: 20px; width: 150px;}
 .detail .discript{margin-top: 40px; border-top: 1px solid #ddd; padding: 30px 20px;}
+
+.cart .addCart .btn{flex: none;}
+.cart .addCart input{width: 40px;}
+.cart .check-info{line-height: 32px; font-size: 16px;}
+.cart .check-info strong{font-size: 20px;}
+.cart .operation{position: fixed; left: 0; bottom: -40px; z-index: 99; background: rgba(0,0,0,0.8); padding: 5px 20px; width: 100%; transition: all 0.5s;}
+.cart .operation.show{bottom: 0;}
+.cart .operation .btn{ padding-top: 2px; padding-bottom: 2px;}
