--- a/view/components/header.html
+++ b/view/components/header.html
@@ -11,6 +11,8 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/socket.io/2.0.4/socket.io.js"></script>
+    <script src="/js/globle.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -46,12 +48,12 @@
                 </div>
         </div>
         <div class="col-2 d-flex mb-0 pr-0 justify-content-end">
+            <% if(login.status==1){ %>
             <div>
-                <% if(login.status==1){ %>
                 <button class="btn text-light dropdown-toggle pl-0" data-toggle="dropdown">
                     Hi~ <%=login.uname %>
                 </button>
-                <% } %>
+                
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">个人中心</a>
                     <a class="dropdown-item" href="#">我的订单</a>
@@ -59,9 +61,18 @@
                     <a class="dropdown-item" href="/user/exit">退出</a>
                 </div>
             </div>
-            <div><a href="#" class="btn btn-danger mr-2">购物车</a></div>
+            <div>
+                <a href="/order/cart" class="btn btn-danger mr-2 cart">
+                    购物车<span class="badge badge-pill badge-light"><%=login.cartCount %></span>
+                </a>
+            </div>
+            <% } %>
             <% if(login.status==0){ %>
+            <div><a href="/order/cart" class="btn btn-danger mr-2">购物车</a></div>
             <div><a href="/login.html" class="btn btn-warning">登录</a></div>
             <% } %>
         </div>
     </header>
+<!-- <script>
+socket = io.connect('ws://127.0.0.1:8000');
+</script> -->
