--- a/view/index.html
+++ b/view/index.html
@@ -40,7 +40,7 @@
                                 <small><%= ele.pslogan %></small></div>
                             <div class="card-text d-flex justify-content-between">
                                 <div class="price"><span>￥<%= ele.salePrice %></span> <small><del>￥<%= ele.unitPrice %></del></small></div>
-                                <a href="javascript:;" class="btn btn-sm btn-outline-primary goCart" data-id="<%= ele.id %>">加入购物车</a>
+                                <a href="javascript:;" class="btn btn-sm btn-outline-primary goCart" data-pid="<%= ele.id %>">加入购物车</a>
                             </div>
                         </div>
                     </div>
